Update to java 9 maps in a few classes.